# opengl-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
resources/shaders/: fragment.glsl
src/: app.cpp  app.h  app.hpp  main.cpp
src/gfx/: renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  window.cpp  window.h  window.hpp
src/util/: io.h
